<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-6dp"
    tools:layout_editor_absoluteY="0dp">

    <EditText
        android:id="@+id/editText_billValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_enterBill"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/label_billValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_billValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/label_billValue"
        app:layout_constraintBottom_toBottomOf="@+id/editText_billValue"
        app:layout_constraintEnd_toStartOf="@+id/editText_billValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_billValue" />

    <TextView
        android:id="@+id/label_tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/label_tipPercent"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup_tipPercent"
        app:layout_constraintEnd_toStartOf="@+id/radioButton_10"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_billValue"
        app:layout_constraintVertical_bias="0.641" />

    <RadioGroup
        android:id="@+id/radioGroup_tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/label_tipPercent"
        app:layout_constraintTop_toBottomOf="@+id/editText_billValue">

        <RadioButton
            android:id="@+id/radioButton_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/tip_10" />

        <RadioButton
            android:id="@+id/radioButton_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/tip_15" />

        <RadioButton
            android:id="@+id/radioButton_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/tip_18" />

        <RadioButton
            android:id="@+id/radioButton_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/tip_custom" />
    </RadioGroup>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="300dp"
        android:text="@string/button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="300dp"
        android:text="@string/button_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_reset" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <SeekBar
        android:id="@+id/seekBar_customTip"
        android:layout_width="202dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/view_customSlider"
        app:layout_constraintStart_toEndOf="@+id/label_customPercent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_tipPercent" />

    <TextView
        android:id="@+id/label_customPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/label_customPercent"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_customTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar_customTip" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="90dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/label_tipFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_customPercent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_amountFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/view_tipFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_tipFinal"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/view_amountFinal"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/view_amountFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/value_amountFinal"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/view_customSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_customSeekBar"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_customTip"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup_tipPercent"
        app:layout_constraintTop_toTopOf="@+id/seekBar_customTip" />

</androidx.constraintlayout.widget.ConstraintLayout>